2009-02-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/mframe/i386/linux:
	* Source/mframe/i386/sysv4.2MP:
	* Source/mframe/i386/linux-gnu:
	* Source/mframe/i386/sysv4.2uw2.1.3:
	* Source/mframe/i386/freebsd:
	* Source/mframe/i386/openbsd:
	* Source/mframe/i386/generic:
	Update/fix macro to build method signature information.

2009-02-20  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Add checks for backtrace() function
        * Headers/Additions/GNUstepBase/config.h.in: regenerate
        * configure: regenerate
        * Source/NSDebug.m: Use backtrace() to get stack if possible ...
        it's more reliable than gcc's __builtin_frame_address() function.
        * Source/cifframe.m: Allocate a slightly larger buffer when
        processing invocations ... somehow this fixes a write outside
        allocated memory by the ffi library on my 64bit debian system.

2009-02-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUndoManager.m: Don't post checkpoint notification when
	beginning top level group.  Fix for #25607

2009-02-16  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Look in LOCAL for headers/libs

	* Headers/Foundation/NSObjCRuntime.h: Define NSINTEGER_DEFINED.
	* Headers/Additions/GNUstepBase/GSCategories.h,
	Headers/Additions/GNUstepBase/GSUnion.h: Additional definitions to compile
	with apple-apple-apple.

2009-02-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/pathconfig/configure.ac: Warn if gnustep-config not found.
	* Source/pathconfig/configure: regenerate
	* Headers/Foundation/NSPointerArray.h: Add more comments.

2009-02-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPointerArray.m: Initial implementation.  Untested.
	No coding/decoding support.

2009-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPointerFunctions.m: Add some more functions to be set by
	options.

2009-02-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m: Use scanned memory to hold array